# bookie

./: .env copy  Dockerfile  README.md  docker-compose.yml  requirements.txt
api-gateway/: Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js
app/: routes.py
auth-service/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
auth-service/src/: app.module.ts  main.ts
auth-service/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
auth-service/src/auth/dto/: signup.dto.ts
auth-service/src/auth/strategies/: jwt.strategy.ts  local.strategy.ts
auth-service/src/users/: users.service.ts
auth-service/src/users/dto/: create-user.dto.ts
auth-service/src/users/schemas/: user.schema.ts
notification-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  notification.py  pyproject.toml  requirements.txt  test.py
notification-service/app/: database.py  main.py  models.py
notification-service/app/routers/: notifications.py
notification-service/app/services/: notification.py
reservation-service/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
reservation-service/app/: database.py  main.py  schemas.py
web-app/: Dockerfile  docker-compose.yml  package-lock.json  package.json
web-app/src/: App.jsx  index.css
web-app/src/api/: client.js
web-app/src/components/: Layout.jsx
web-app/src/context/: AuthContext.jsx
web-app/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
