[project]
name = "reservation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]
